# vulpes

./: .clang-format  .gitignore  CMakeLists.txt  MODULE.bazel  Makefile  README.md  example.cuss  pyproject.toml
.github/workflows/: build.yaml  ci.yml  pre-commit.yaml
cuss/: lexer.py  location.py  token.py
docs/: spec.md  vulpes.md
examples/: spec_example.vx
prototype/: main.py  pyproject.toml  test_parser.py
prototype/docs/: ast_passes.md
prototype/prototype/: ast.py  errors.py  module_builder.py  parser.py  passes.py  result.py  symbol.py  types.py
prototype/prototype/ast/: ast.py  symbol.py
prototype/prototype/ast/passes/: __init__.py  export_collection.py  import_linker.py  module_res.py  name_ref.py  name_res.py  pass_types.py  pipeline.py  type_collection.py  type_norm.py
prototype/prototype/passes/: base_pass.py  module_builder.py  name_decl_pass.py  name_ref_pass.py  symbol_table.py  type_check_pass.py  type_infer_pass.py  type_res_pass.py
prototype/tests/: test_export_collection.py  test_import_linker.py  test_module_res.py  test_name_decl_pass.py  test_name_ref.py  test_name_ref_pass.py  test_name_res.py  test_parser.py  test_type_collection.py  test_type_inf_pass.py  test_type_norm.py  test_type_res_pass.py
src/: BUILD.bazel  CMakeLists.txt  main.cpp
src/codegen/: bytecode_emitter.cpp  bytecode_emitter.hpp
src/frontend/: ast.hpp  lexer.cpp  lexer.hpp  location.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/tests/: test_booleans.cpp  test_builtins.cpp  test_closures.cpp  test_comparisons.cpp  test_control_flow.cpp  test_enums.cpp  test_for_loop.cpp  test_functions.cpp  test_globals.cpp  test_helpers.hpp  test_lexer.cpp  test_logical.cpp  test_map.cpp  test_operators.cpp  test_parser.cpp  test_scoping.cpp  test_structs_classes.cpp  test_unary.cpp  test_vec.cpp  test_vm.cpp
src/vm/: arena.cpp  arena.hpp  call_frame.hpp  function.hpp  heap.cpp  heap.hpp  instruction.cpp  instruction.hpp  machine.cpp  machine.hpp  object.cpp  object.hpp  opcode.cpp  opcode.hpp  value.cpp  value.hpp  vm_errors.hpp
src/vm/object/: base.hpp  boolean.hpp  byte.hpp  char.hpp  float.cpp  float.hpp  function.cpp  function.hpp  instance.hpp  integer.cpp  integer.hpp  list.hpp  map.hpp  native_function.hpp  null.hpp  string.hpp  upvalue.hpp  vec.hpp
stdlib/: collections.vx  io.vx  math.vx  string.vx  test_stdlib.vx
