[tool.poetry]
name = "prototype"
version = "0.1.0"
description = ""
authors = ["Liam Eckert <liameckert17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
