VULPES_COPTS = [
    "-Weverything",
    "-Werror",
    "-Wno-c++98-compat",
    "-Wno-c++98-compat-pedantic",
    "-Wno-padded",
    "-Wno-shadow-field-in-constructor",
    "-Wno-weak-vtables",
    "-Wno-global-constructors",
    "-Wno-exit-time-destructors",
    "-Wno-poison-system-directories",
    "-Wno-covered-switch-default",
]

cc_library(
    name = "frontend",
    srcs = [
        "frontend/lexer.cpp",
        "frontend/parser.cpp",
        "frontend/token.cpp",
    ],
    hdrs = [
        "frontend/ast.hpp",
        "frontend/lexer.hpp",
        "frontend/location.hpp",
        "frontend/parser.hpp",
        "frontend/token.hpp",
    ],
    copts = VULPES_COPTS,
    includes = ["."],
)

cc_library(
    name = "vm",
    srcs = [
        "vm/heap.cpp",
        "vm/machine.cpp",
        "vm/object/float.cpp",
        "vm/object/function.cpp",
        "vm/object/integer.cpp",
    ],
    hdrs = [
        "vm/call_frame.hpp",
        "vm/heap.hpp",
        "vm/instruction.hpp",
        "vm/machine.hpp",
        "vm/object/base.hpp",
        "vm/object/boolean.hpp",
        "vm/object/char.hpp",
        "vm/object/float.hpp",
        "vm/object/function.hpp",
        "vm/object/instance.hpp",
        "vm/object/integer.hpp",
        "vm/object/map.hpp",
        "vm/object/native_function.hpp",
        "vm/object/null.hpp",
        "vm/object/string.hpp",
        "vm/object/vec.hpp",
    ],
    copts = VULPES_COPTS,
    includes = ["."],
    deps = [":frontend"],
)

cc_library(
    name = "codegen",
    srcs = ["codegen/bytecode_emitter.cpp"],
    hdrs = ["codegen/bytecode_emitter.hpp"],
    copts = VULPES_COPTS,
    includes = ["."],
    deps = [
        ":frontend",
        ":vm",
    ],
)

cc_binary(
    name = "vulpes",
    srcs = ["main.cpp"],
    copts = VULPES_COPTS,
    deps = [
        ":codegen",
        ":frontend",
        ":vm",
    ],
)

cc_test(
    name = "vulpes_tests",
    srcs = [
        "tests/test_booleans.cpp",
        "tests/test_builtins.cpp",
        "tests/test_comparisons.cpp",
        "tests/test_control_flow.cpp",
        "tests/test_enums.cpp",
        "tests/test_for_loop.cpp",
        "tests/test_functions.cpp",
        "tests/test_globals.cpp",
        "tests/test_helpers.hpp",
        "tests/test_lexer.cpp",
        "tests/test_logical.cpp",
        "tests/test_map.cpp",
        "tests/test_operators.cpp",
        "tests/test_parser.cpp",
        "tests/test_scoping.cpp",
        "tests/test_structs_classes.cpp",
        "tests/test_unary.cpp",
        "tests/test_vec.cpp",
        "tests/test_vm.cpp",
    ],
    copts = VULPES_COPTS,
    deps = [
        ":codegen",
        ":frontend",
        ":vm",
        "@catch2//:catch2_main",
    ],
)
